@@ -1,3 +1,8 @@
+2002-08-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf32-i386.c (elf_i386_relocate_section): Fill in proper addend
+	for R_386_TLS_TPOFF32 relocs against symndx 0.
+
 2002-08-07  H.J. Lu <hjl@gnu.org>
 
 	* elflink.h (NAME(bfd_elf,size_dynamic_sections)): Check symbol
